--- a/server/views/password.handlebars
+++ b/server/views/password.handlebars
@@ -1,10 +1,6 @@
 <div class="flex" style="margin: 29px;">
   <div style="margin: 2px;">
-    <form
-      action="/login"
-      method="POST"
-      enctype="application/x-www-form-urlencoded"
-    >
+    <form action="/" method="POST" enctype="application/x-www-form-urlencoded">
       <div style="display: flex; flex-flow: row wrap; padding: 2px;">
         <input
           placeholder="Enter password"
